--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <header class="text-center">
         <h1 style="color:white;">Bienvenue sur le Blog du groupe2</h1>
-        <img src="c:\Users\PC\Downloads\ChatGPT Image 17 avr. 2025, 15_01_04.png" alt="présentation" class="img-fluid rounded-circle mb-4" style="width: 150px; height: 150px;">
+        <img src="ChatGPT Image 17 avr. 2025, 15_01_04.png" alt="présentation" class="img-fluid rounded-circle mb-4" style="width: 150px; height: 150px;">
         <p style="color:pink;">Découvrez nos réflexions, créations et partages autour de la technologie, de l’art et de la vie.</p>
     </header>
     <header class="text-center">
